# flick

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html  script.js  styles.css
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_client.rs  buffer.rs  commands.rs  config.rs  key_hook.rs  keychain.rs  lib.rs  main.rs  replacer.rs  tray.rs  trigger.rs
src/lib/: ApiKeyInput.svelte  CommandList.svelte  Settings.svelte  Toast.svelte
src/styles/: global.css
