[package]
name = "flick"
version = "1.0.0"
description = "Type. Trigger. Done. — A global text transformation utility."
authors = ["Flick"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "flick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
rdev = "0.5"
enigo = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1", features = ["full"] }
arboard = "3"
regex = "1"
anyhow = "1"
log = "0.4"
once_cell = "1"
